--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/howler": "^2.2.7",
+    "howler": "^2.2.3",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
